@@ -2,7 +2,7 @@
  *  @file   unicoder.cpp
  *  @author Perry Rapp, Creator, 2003-2004
  *  @date   Created: 2003-10
- *  @date   Edited:  2005-01-28 (Perry Rapp)
+ *  @date   Edited:  2005-12-13 (Perry Rapp)
  *
  *  @brief  Implementation of utility unicode conversion routines
  */
@@ -482,9 +482,9 @@ CString maketstring(LPCSTR lpd, UINT len, int codepage, bool * lossy)
 
 	if (!len) return _T("");
 
-	// NO ! codepage = 0 is the value of CP_ACP !
-	// if (!codepage)
-	// 	codepage = defcodepage;
+	// 0 is a valid value (CP_ACP)!
+	if (codepage == -1)
+		codepage = defcodepage;
 
 #ifdef UNICODE
 	// Convert input to Unicode, using specified codepage
